--- a/web/html/menu.html
+++ b/web/html/menu.html
@@ -374,7 +374,7 @@
             <button class="next" onclick="moveSlideBuatoi(1)">&#10095;</button>
         </div>  
         </div>
-        <script src="btlon.js"></script>
+        <script src="menu.js"></script>
 
         <footer>
             <div class="content">
